# C-

./: README.md
01_LIRS_cache/: CMakeLists.txt  README.md  a.out  cache.cpp  cache.hpp  prescient.cpp  prescient.hpp
01_LIRS_cache/Lirs/: CMakeLists.txt  cache.cpp  cache.hpp
01_LIRS_cache/belady/: CMakeLists.txt  belady.cpp  belady.hpp
01_LIRS_cache/source/: CMakeLists.txt
01_LIRS_cache/source/Belady/: CMakeLists.txt
01_LIRS_cache/source/Lirs/: CMakeLists.txt
01_LIRS_cache/tests/: main.py
02_Triangles/include/: primitives.hpp
04_Matrix/: CMakeLists.txt  README.md
04_Matrix/include/: matrix.hpp
04_Matrix/source/: CMakeLists.txt  main.cpp  unit_test.cpp
04_Matrix/source/Matrix/: CMakeLists.txt  main.cpp
04_Matrix/source/Unit_tests/: CMakeLists.txt  unit_tests.cpp
04_Matrix/tests/: main.py
